@@ -9,7 +9,7 @@ val jUnitInterface = "com.github.sbt" % "junit-interface" % "0.13.3" % "test"
 val catsEffect = "org.typelevel" %% "cats-effect" % "3.5.2"
 val catEffectTest = "org.typelevel" %% "cats-effect-testkit" % "3.5.2" % Test
 val scalaReflection = "org.scala-lang" % "scala-reflect" % scalaV
-val logback = "ch.qos.logback" % "logback-classic" % "1.3.11"
+val logback = "ch.qos.logback" % "logback-classic" % "1.4.11"
 val embedMongoVersion = "4.9.2"
 
 val scalaTestDeps = Seq(
@@ -195,7 +195,7 @@ lazy val scala_akka = (project in file("scala-akka"))
   .settings(
     name := "scala-akka",
     libraryDependencies ++= scala_akka_dependencies ++ Seq(
-      "ch.qos.logback" % "logback-classic" % "1.2.3", // scala-steward:off
+      "ch.qos.logback" % "logback-classic" % "1.4.11", // scala-steward:off
       embeddedMongo % "it,compile"
     ) ++ scalaTestDeps.map(_.withConfigurations(Some("it,test"))),
     Defaults.itSettings
@@ -510,7 +510,11 @@ lazy val spark_scala = (project in file("spark-scala"))
     libraryDependencies ++= Seq(
       sparkSqlDep,
       sparkCoreDep
-    ) ++ scalaTestDeps
+    ) ++ scalaTestDeps,
+    fork := true,
+    javaOptions ++= Seq(
+      "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED" //Added for JDK 17 issue with Spark
+    )
   )
 
 addCommandAlias(
